# cimmanon-website

./: .gitignore  cabal.config  cimmanon.cabal  config.rb  readme.md
sass/: _common.scss  _layout.scss  _print.scss  _variables.scss  responsive.scss
sass/common/: _elements.scss  _mixins.scss  _variables.scss  _widgets.scss
sass/sections/: _admin.scss  _archive.scss  _portfolio.scss  _resume.scss
sass/widgets/: _common.scss  _mixins.scss
setup/: migration.sql  setup.sql
setup/data/: projects.sql
setup/migration/: 01_archive_bool_to_text.sql  02_project_components_featured.sql  03_foreign_key_on_delete_cascade.sql  04_switch_to_writeable_views.sql  1_archive_bool_to_text.sql  2_project_components_featured.sql
setup/schema/: functions.sql  projects.sql  tables.sql  triggers.sql  writeable_views.sql
snaplets/heist/templates/: _admin.tpl  _flash.tpl  _layout.tpl  _layout_header_only.tpl  index.tpl  resume.tpl
snaplets/heist/templates/components/: _admin.tpl  _component.tpl  _form.tpl  add.tpl  admin.tpl  archive.tpl  edit.tpl  images.tpl  list.tpl
snaplets/heist/templates/errors/: 403.tpl  404.tpl  500.tpl
snaplets/heist/templates/portfolio/: _component.tpl  _project.tpl  _project_list.tpl  by_component.tpl  list_by.tpl  project.tpl  tags.tpl  year.tpl
snaplets/heist/templates/portfolio/admin/: edit.tpl
snaplets/heist/templates/projects/: _admin.tpl  _form.tpl  _links.tpl  _project.tpl  _project_details.tpl  _project_list.tpl  add.tpl  admin.tpl  by_component.tpl  by_tag.tpl  by_type.tpl  by_year.tpl  edit.tpl  list.tpl  project.tpl
snaplets/heist/templates/settings/: _name_form.tpl  component_types.tpl  tag_categories.tpl  tags.tpl
sql/portfolio/: by_component.sql  by_tag.sql  by_type.sql  by_year.sql  component.sql  components.sql  get_with_component.sql  insert_image.sql  overview.sql  tag_list.sql  year_list.sql
sql/portfolio/components/: add.sql  get.sql  list.sql  list_admin.sql  update.sql
sql/portfolio/images/: add.sql  list.sql  update.sql
sql/portfolio/projects/: add.sql  by_tag.sql  by_type.sql  by_year.sql  get.sql  get_with_component.sql  list_admin.sql  list_featured.sql  update.sql
sql/portfolio/settings/component_types/: add.sql  delete.sql  list.sql  update.sql
sql/portfolio/settings/tag_categories/: add.sql  delete.sql  list.sql  update.sql
sql/portfolio/settings/tags/: add.sql  delete.sql  grouped_by_category.sql  grouped_by_type.sql  list.sql  list_admin.sql  update.sql
src/: Application.hs  Main.hs  Site.hs  Splices.hs
src/Model/: Component.hs  ComponentType.hs  Image.hs  Project.hs  Tag.hs  TagCategory.hs
src/Model/Types/: Component.hs  Image.hs  Project.hs
src/Util/: Database.hs  Digestive.hs  Form.hs
static/: robots.txt
static/css/: responsive.css
static/javascript/: df-list.js
