Name:                cimmanon
Version:             0.2
Synopsis:            A portfolio CMS for multi-talented individuals
Description:         Project Description Here
License:             AllRightsReserved
Author:              C. Siepker
Maintainer:          spam@cimmanon.org
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: True

Flag old-base
  default: False
  manual: False

Executable cimmanon
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    bytestring                >= 0.9.1   && < 0.11,
    heist                     >= 1.0     && < 1.1,
    map-syntax                >= 0.2     && < 0.3,
    monad-control             >= 1.0     && < 1.1,
    mtl                       >= 2       && < 3,
    snap                      >= 1.0     && < 1.1,
    snap-core                 >= 1.0     && < 1.1,
    snap-server               >= 1.0     && < 1.1,
    snap-loader-static        >= 1.0     && < 1.1,
    text                      >= 0.11    && < 1.3,
    time                      >= 1.1     && < 1.7,
    xmlhtml                   >= 0.1

    , snaplet-postgresql-simple
    , postgresql-simple
    , digestive-functors-snap
    , digestive-functors-heist >= 0.8.8
    , digestive-functors-heist-extras
    , digestive-functors >= 0.8.3
    , snap-extras == 0.12.0.*
    , snap-handlers
    , camellia-splices
    , postgresql-simple-tuple
    , template-haskell
--    , blaze-builder
    , transformers
    , safe
    , old-locale
    , directory
    , filepath
    , JuicyPixels
    , lifted-base
--    , smtp-mail
--    , digestive-functors-aeson
--    , aeson

  if flag(old-base)
    build-depends:
      base                      >= 4        && < 4.4,
      lens                      >= 3.7.6    && < 3.8
  else
    build-depends:
      base                      >= 4.4      && < 5,
      lens                      >= 3.7.6    && < 4.15

  ghc-options:
    -fno-warn-tabs

  if flag(development)
    build-depends:
      snap-loader-dynamic >= 1.0 && < 1.1
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -funbox-strict-fields -O2
                   -fno-warn-orphans
